--- a/AMSI/Projeto/app/src/main/AndroidManifest.xml
+++ b/AMSI/Projeto/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.ProdutosGinasio"
         tools:targetApi="31">
         <activity
+            android:name=".PerfilAtualizarActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PerfilActivity"
+            android:exported="false" />
+        <activity
             android:name=".FavoritosActivity"
             android:exported="false" />
         <activity
