--- a/AMSI/Projeto/app/src/main/AndroidManifest.xml
+++ b/AMSI/Projeto/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.ProdutosGinasio"
         tools:targetApi="31">
         <activity
+            android:name=".DetalhesDeEncomendasActivity"
+            android:exported="false" />
+        <activity
             android:name=".FinalizarCompraActivity"
             android:exported="false" />
         <activity
